--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
     //oneSignal
     implementation 'com.onesignal:OneSignal:[3.15.0, 3.99.99]'
 
-
+    implementation 'com.wang.avi:library:2.1.3'
     // crashlytics
 //    implementation 'com.google.firebase:firebase-analytics:17.4.3'
 //    implementation 'com.google.firebase:firebase-core:17.4.3'
@@ -102,7 +102,7 @@ dependencies {
 //    // push notification
 //    implementation 'com.google.firebase:firebase-messaging:20.2.1'
 
-
+    implementation 'com.github.HamidrezaAmz:MagicalExoPlayer:1.0.15'
     //admob
     implementation 'com.google.android.gms:play-services-ads:19.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
