--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.LanguageActivity"></activity>
         <activity android:name=".activity.TvStreamingActivity" />
         <activity android:name=".activity.ChannelListActivity" />
         <activity android:name=".activity.SelectLanguageTvActivity" />
