--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         <activity android:name=".activity.ChannelListActivity" />
         <activity android:name=".activity.SelectLanguageTvActivity" />
         <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.PreferenceActivity" />
+        <activity android:name=".activity.SearchActivity"/>
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
